--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ button{
     text-align: center;
     color: #fff;
 }
-.hero-btn{
+.btn{
     border: none;
     border-radius: 4px;
     padding: 16px 32px;
@@ -154,8 +154,8 @@ button{
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.hero-btn:hover,
-.hero-btn:focus{
+.btn:hover,
+.btn:focus{
     background-color: #404bbf;
 }
 /* #endregion */
@@ -411,6 +411,7 @@ margin-bottom: 8px;
     left: 50%;
     width: 408px;
     min-height: 584px;
+    padding: 24px;
     border-radius: 4px;
     transform: translate(-50%, -50%);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -450,7 +451,60 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    padding-top: 72px;
+    margin-top: 72px;
+    margin-bottom: 16px;
 }
-
+.label-wrap{
+    display: block;
+    
+}
+.modal-label{
+    display: block;
+    margin-bottom: 8px;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+.input-wrap{
+    position: relative;
+}
+.modal-input{
+    width: 100%;
+    height: 40px;
+    padding: 11px 38px;
+    outline: none;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus, .comment:focus{
+    border-color: #4d5ae5;
+}
+.modal-icon{
+    position: absolute;
+    top: 50%;
+    left: 16px;
+    transform: translateY(-50%);
+    fill: #2e2f42;
+    pointer-events: none;
+}
+.modal-input:focus + .modal-icon {
+    fill: #4d5ae5;
+}
+.textarea-wrap{
+    display: block;
+}
+.textarea{
+    width: 100%;
+    max-height: 120px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 4px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn{
+    min-width: 169px;
+    height: 56px;
+}
 /* #endregion */
