add html, css, svg

--- a/css/styles.css
+++ b/css/styles.css
@@ -343,15 +343,18 @@ margin-bottom: 8px;
 /* #region footer */
 .footer-container{
     display: flex;
-    align-items: baseline;
-    gap: 120px;
+    
+}
+.logo-footer-container{
+    margin-right: 120px;
 }
 .footer{
     padding: 100px 0;
     background-color: #2e2f42;
 }
 .logo-footer{
-    margin-bottom: 16px;
+    display: inline-block;
+    padding-bottom: 16px;
     width: 115px;
     font-family: "Raleway",sans-serif;
     font-weight: 700;
@@ -371,7 +374,7 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     color: #f4f4fd;
 }
-.soc-title{
+.footer-title{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -385,7 +388,43 @@ margin-bottom: 8px;
 .footer-link:hover, .footer-link:focus{
     background-color: #31d0aa;
 }
+.form-footer-container{
+    display: block;
+    margin-left: auto;
+}
+.form-footer {
+  display: flex;
+  align-items: center;
+}
 
+.footer-email{
+    background: none;
+    margin-right: 24px;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    color: #fff;
+    width: 264px;
+    height: 40px;
+    outline: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.footer-email:focus{
+    border-color: #31d0aa;
+
+}
+.footer-btn{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 16px;
+    padding: 8px 24px;
+}
+.footer-btn:hover, .footer-btn:focus{
+    background-color: #31d0aa;
+}
+.subscribe-icon{
+    padding: auto;
+}
 /* #endregion */
 /* #region */
 .backdrop{
@@ -451,16 +490,15 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 72px;
+    margin-top: 48px;
     margin-bottom: 16px;
 }
 .label-wrap{
     display: block;
-    
 }
 .modal-label{
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     font-weight: 400;
     font-size: 12px;
     line-height: 1.17;
@@ -474,12 +512,13 @@ margin-bottom: 8px;
     width: 100%;
     height: 40px;
     padding: 11px 38px;
+    margin-bottom: 8px;
     outline: none;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus, .comment:focus{
+.modal-input:focus, .textarea:focus{
     border-color: #4d5ae5;
 }
 .modal-icon{
@@ -499,12 +538,67 @@ margin-bottom: 8px;
 .textarea{
     width: 100%;
     max-height: 120px;
+    padding: 8px 16px;
+    margin-bottom: 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: none;
+    resize: none;
+}
+textarea::placeholder{
+    font-size: 12px;
+    line-height: 1.16667;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.4);
 }
 .modal-btn{
+    display: block;
+    margin: 0 auto;
     min-width: 169px;
     height: 56px;
+}
+
+.modal-agreement {
+    display: block;
+    margin-bottom: 24px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: #8e8f99;
+}
+
+.agreement-span {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 16px;
+    height: 16px;
+    margin-right: 8px;
+    border-radius: 2px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color, border-color;
+}
+.checkbox:checked + .agreement-span{
+    background-color: #404bbf;
+    border-color: #404bbf;
+}
+.agreement-icon {
+    opacity: 0;
+    fill: #f4f4fd;
+     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox:checked + .agreement-span > .agreement-icon{
+    opacity: 1;
+}
+.link-agreement{
+    line-height: 1.33;
+    text-decoration: underline;
+    text-decoration-skip-ink: none;
+    color: #4d5ae5;
 }
 /* #endregion */
