--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,11 @@ margin-bottom: 8px;
     margin-right: 24px;
     border: 1px solid #fff;
     border-radius: 4px;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
     color: #fff;
+    padding-left: 16px;
     width: 264px;
     height: 40px;
     outline: none;
@@ -411,6 +415,9 @@ margin-bottom: 8px;
 .footer-email:focus{
     border-color: #31d0aa;
 
+}
+.footer-email::placeholder{
+    color: #fff;;
 }
 .footer-btn{
     display: flex;
@@ -437,7 +444,7 @@ margin-bottom: 8px;
     opacity: 0;
     visibility: hidden;
     pointer-events: none;
-    transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-open{
     opacity: 1;
@@ -450,7 +457,7 @@ margin-bottom: 8px;
     left: 50%;
     width: 408px;
     min-height: 584px;
-    padding: 24px;
+    padding: 72px 24px 24px;
     border-radius: 4px;
     transform: translate(-50%, -50%);
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
@@ -461,17 +468,21 @@ margin-bottom: 8px;
     transform: translate(-50%, -50%);
 }
 .close-button{
-    position: absolute;
-    top: 24px;
-    right: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transform: translate(336px, -48px);
+    border: none;
     border-radius: 50%;
     width: 24px;
     height: 24px;
     background-color: #e7e9fc;
-    border: 1px solid rgba(0, 0, 0, 0.1)
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .close-icon{
     fill: #2e2f42;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .close-button:hover,
@@ -490,7 +501,6 @@ margin-bottom: 8px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #2e2f42;
-    margin-top: 48px;
     margin-bottom: 16px;
 }
 .label-wrap{
@@ -528,6 +538,7 @@ margin-bottom: 8px;
     transform: translateY(-50%);
     fill: #2e2f42;
     pointer-events: none;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 .modal-input:focus + .modal-icon {
     fill: #4d5ae5;
@@ -537,7 +548,7 @@ margin-bottom: 8px;
 }
 .textarea{
     width: 100%;
-    max-height: 120px;
+    height: 120px;
     padding: 8px 16px;
     margin-bottom: 16px;
     font-size: 12px;
@@ -580,8 +591,7 @@ textarea::placeholder{
     margin-right: 8px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition-property: background-color, border-color;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .checkbox:checked + .agreement-span{
     background-color: #404bbf;
