--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ margin-bottom: 8px;
 }
 .logo-footer{
     display: inline-block;
-    padding-bottom: 16px;
+    margin-bottom: 16px;
     width: 115px;
     font-family: "Raleway",sans-serif;
     font-weight: 700;
@@ -463,15 +463,18 @@ margin-bottom: 8px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    position: relative;
 }
 .backdrop:not(.is-open) .modal{
     transform: translate(-50%, -50%);
 }
 .close-button{
+    position: absolute;
+    top: 24px;
+    right: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(336px, -48px);
     border: none;
     border-radius: 50%;
     width: 24px;
@@ -519,6 +522,9 @@ margin-bottom: 8px;
     position: relative;
 }
 .modal-input{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
     height: 40px;
     padding: 11px 38px;
@@ -577,7 +583,7 @@ textarea::placeholder{
     display: block;
     margin-bottom: 24px;
     font-size: 12px;
-    line-height: 1.17;
+    line-height: 1.33;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
