--- a/css/styles.css
+++ b/css/styles.css
@@ -463,7 +463,6 @@ margin-bottom: 8px;
     box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
     background-color: #fcfcfc;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    position: relative;
 }
 .backdrop:not(.is-open) .modal{
     transform: translate(-50%, -50%);
@@ -560,6 +559,7 @@ margin-bottom: 8px;
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
+    color: #2e2f42;
     border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
